# dataset-api

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  dump.yaml  owners.yaml  pyproject.toml  skaffold.yaml  taskfile.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yaml  update-docs.yaml
alembic/: env.py
alembic/versions/: 4e2d7c63abb2_.py
app/: config.py  main.py
app/api/: __init__.py
app/api/endpoints/: db_test.py  health.py
app/db/: __init__.py  postgres.py
celine/dataset/: main.py
celine/dataset/cli/: export_openlineage.py  import_catalogue.py  main.py
celine/dataset/core/: config.py  logging.py
celine/dataset/db/: engine.py  reflection.py
celine/dataset/routes/: __init__.py  admin.py  catalogue.py  catalogue_admin.py  catalogue_dataset_schema.py  dataset.py  health.py  metadata.py  views.py
celine/dataset/schemas/: dataset_metadata.py  dataset_query.py
celine/dataset/security/: auth.py  disclosure.py  governance.py  models.py  opa.py
celine/dataset/static/: style.css
celine/dataset/templates/: base.html  dataset.html  index.html
dataset/: main.py
dataset/api/: admin.py  catalogue.py  dataset.py  health.py
dataset/api/catalogue/: db.py  dcat_formatter.py  models.py
dataset/api/dataset_query/: executor.py  parser.py
dataset/api/metadata/: __init__.py  schema_builder.py
dataset/catalogue/: db.py  dcat_formatter.py  models.py  schema.py
dataset/cli/: export_openlineage.py  import_catalogue.py  main.py  utils.py
dataset/cli/ontology/: analyze.py  fetch.py  main.py  tree.py
dataset/core/: config.py  datasets.py  governance.py  healthcheck.py  jsonld.py  logging.py  utils.py
dataset/db/: engine.py  reflection.py
dataset/db/models/: dataset_entry.py
dataset/dcat/: builder.py  openlineage_client.py
dataset/routes/: __init__.py  admin.py  catalogue.py  dataset.py  health.py  metadata.py
dataset/schemas/: catalogue_import.py  dataset_query.py
dataset/security/: auth.py  disclosure.py  governance.py  opa.py
docs/: architecture.md  catalogue-management.md  cli-operations.md  governance-security.md  query-engine.md
migrations/: env.py
migrations/versions/: 11ab075cfa8f_.py  143b61abdd2b_.py  82d9cd470dfc_.py  d06507cdb308_.py
ontologies/: README.md  celine.jsonld  celine.schema.json  celine.shacl.ttl  celine.ttl  open-repository.yaml
policies/celine/: dataset.rego  scopes.rego
scripts/: dump_source.py
src/: main.py
src/celine/dataset/: ext.py  main.py
tests/: conftest.py  test_admin_api.py  test_backend_resolution.py  test_catalogue_import.py  test_dataset_query.py  test_dcat_formatter.py  test_module_system.py  test_openlineage_extractor.py  test_query_api.py  test_reflection_metadata_lookup.py  test_sql_filter_core.py  test_validation.py
tests/api/: test_backend_resolution.py  test_catalogue_import.py  test_dcat_formatter.py  test_openlineage_extractor.py  test_reflection_metadata_lookup.py  test_sql_filter_core.py  test_validation.py
tests/api/dataset_query/: test_sql_filter_core.py
tests/api/sql_parser/: conftest.py  test_accept_simple.py  (+7 more)
tests/routes/: test_dataset_query.py  test_query_api.py
tests/security/: conftest.py  test_governance.py
(+67 files in other folders)
